# sftui

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
.github/: dependabot.yml
.github/workflows/: auto-tag.yml  ci.yml  docs.yml  release.yml
src/: app.rs  main.rs  sftp.rs  ssh_config.rs  ui.rs
test-mount/: sample.txt
