[package]
name = "sftui"
version = "0.2.1"
edition = "2024"
authors = ["wtnqk"]
description = "A terminal UI SFTP client with dual-pane interface"
repository = "https://github.com/wtnqk/sftui"
readme = "README.md"
license = "MIT"
keywords = ["sftp", "ssh", "tui", "terminal", "file-transfer"]
categories = ["command-line-utilities", "network-programming"]

[dependencies]
crossterm = "0.28"
ratatui = "0.28"
tokio = { version = "1.0", features = ["full"] }
ssh2 = "0.9"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
dirs = "6.0"
clap = { version = "4.0", features = ["derive"] }
